--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -27,6 +27,7 @@
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
+      <p id = "currentTime" class = "lead"></p>
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
@@ -38,7 +39,7 @@
         </div>
         <textarea value = "" id="comment9am" type = "text" cols = "100" rows = "2" class = "form-control description textarea"></textarea>
         <div class = "input-group-append">
-          <button id = "button9am" class = "btn btn-outline-secondary" type = "button"> <i class = "far fa-save"></i></button>
+          <button id = "button9am" class = "btn btn-outline-secondary saveBtn" type = "button"> <i class = "far fa-save"></i></button>
         </div>
       </div>
 
@@ -49,7 +50,7 @@
         </div>
         <textarea value = "" id="comment10am" type = "text" cols = "100" rows = "2" class = "form-control description textarea"></textarea>
         <div class = "input-group-append">
-          <button id = "button10am" class = "btn btn-outline-secondary" type = "button"> <i class = "far fa-save"></i></button>
+          <button id = "button10am" class = "btn btn-outline-secondary saveBtn" type = "button"> <i class = "far fa-save"></i></button>
         </div>
       </div>
 
@@ -60,7 +61,7 @@
         </div>
         <textarea value = "" id="comment11am" type = "text" cols = "100" rows = "2" class = "form-control description textarea"></textarea>
         <div class = "input-group-append">
-          <button id = "button11am" class = "btn btn-outline-secondary" type = "button"> <i class = "far fa-save"></i></button>
+          <button id = "button11am" class = "btn btn-outline-secondary saveBtn" type = "button"> <i class = "far fa-save"></i></button>
         </div>
       </div>
 
@@ -71,7 +72,7 @@
         </div>
         <textarea value = "" id="comment12pm" type = "text" cols = "100" rows = "2" class = "form-control description textarea"></textarea>
         <div class = "input-group-append">
-          <button id = "button12pm" class = "btn btn-outline-secondary" type = "button"> <i class = "far fa-save"></i></button>
+          <button id = "button12pm" class = "btn btn-outline-secondary saveBtn" type = "button"> <i class = "far fa-save"></i></button>
         </div>
       </div>
 
@@ -82,7 +83,7 @@
         </div>
         <textarea value = "" id="comment1pm" type = "text" cols = "100" rows = "2" class = "form-control description textarea"></textarea>
         <div class = "input-group-append">
-          <button id = "button1pm" class = "btn btn-outline-secondary" type = "button"> <i class = "far fa-save"></i></button>
+          <button id = "button1pm" class = "btn btn-outline-secondary saveBtn" type = "button"> <i class = "far fa-save"></i></button>
         </div>
       </div>
 
@@ -93,7 +94,7 @@
         </div>
         <textarea value = "" id="comment2pm" type = "text" cols = "100" rows = "2" class = "form-control description textarea"></textarea>
         <div class = "input-group-append">
-          <button id = "button2pm" class = "btn btn-outline-secondary" type = "button"> <i class = "far fa-save"></i></button>
+          <button id = "button2pm" class = "btn btn-outline-secondary saveBtn" type = "button"> <i class = "far fa-save"></i></button>
         </div>
       </div>
 
@@ -104,7 +105,7 @@
         </div>
         <textarea value = "" id="comment3pm" type = "text" cols = "100" rows = "2" class = "form-control description textarea"></textarea>
         <div class = "input-group-append">
-          <button id = "button3pm" class = "btn btn-outline-secondary" type = "button"> <i class = "far fa-save"></i></button>
+          <button id = "button3pm" class = "btn btn-outline-secondary saveBtn" type = "button"> <i class = "far fa-save"></i></button>
         </div>
       </div>
 
@@ -115,7 +116,7 @@
         </div>
         <textarea value = "" id="comment4pm" type = "text" cols = "100" rows = "2" class = "form-control description textarea"></textarea>
         <div class = "input-group-append">
-          <button id = "button4pm" class = "btn btn-outline-secondary" type = "button"> <i class = "far fa-save"></i></button>
+          <button id = "button4pm" class = "btn btn-outline-secondary saveBtn" type = "button"> <i class = "far fa-save"></i></button>
         </div>
       </div>
 
@@ -126,7 +127,7 @@
         </div>
         <textarea value = "" id="comment5PM" type = "text" cols = "100" rows = "2" class = "form-control description textarea"></textarea>
         <div class = "input-group-append">
-          <button id = "button5pm" class = "btn btn-outline-secondary" type = "button"> <i class = "far fa-save"></i></button>
+          <button id = "button5pm" class = "btn btn-outline-secondary saveBtn" type = "button"> <i class = "far fa-save"></i></button>
         </div>
       </div>
 
@@ -134,5 +135,6 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
