--- a/index.html
+++ b/index.html
@@ -33,103 +33,67 @@
       <!-- Timeblocks go here -->
 
       <!---9AM-->
-      <div class = "input-group mb-3">
-        <div class = "input-group-prepend-row">
-          <span class = "input-group-text hour">9:00 AM</span>    
-        </div>
-        <textarea value = "" id="comment9am" type = "text" cols = "100" rows = "2" class = "form-control description textarea"></textarea>
-        <div class = "input-group-append">
-          <button id = "button9am" class = "btn btn-outline-secondary saveBtn" type = "button"> <i class = "far fa-save"></i></button>
-        </div>
-      </div>
+     <div id = "calendar-row1" class = "row justify-content-md-center border-top border-bottom calendar-row">
+       <div id = "time1" class = "col-md-1">9 AM</div>
+        <textarea rows = "3" id = "text-entry1" class = "col-md-10"></textarea>
+        <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+     </div>
 
-      <!---10AM-->
-      <div class = "input-group mb-3">
-        <div class = "input-group-prepend-row">
-          <span class = "input-group-text hour">10:00 AM</span>    
-        </div>
-        <textarea value = "" id="comment10am" type = "text" cols = "100" rows = "2" class = "form-control description textarea"></textarea>
-        <div class = "input-group-append">
-          <button id = "button10am" class = "btn btn-outline-secondary saveBtn" type = "button"> <i class = "far fa-save"></i></button>
-        </div>
-      </div>
+     <!---10AM-->
+     <div id = "calendar-row2" class = "row justify-content-md-center border-top border-bottom calendar-row">
+      <div id = "time2" class = "col-md-1">10 AM</div>
+       <textarea rows = "3" id = "text-entry2" class = "col-md-10"></textarea>
+       <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+    </div>
 
-      <!---11AM-->
-      <div class = "input-group mb-3">
-        <div class = "input-group-prepend-row">
-          <span class = "input-group-text hour">11:00 AM</span>    
-        </div>
-        <textarea value = "" id="comment11am" type = "text" cols = "100" rows = "2" class = "form-control description textarea"></textarea>
-        <div class = "input-group-append">
-          <button id = "button11am" class = "btn btn-outline-secondary saveBtn" type = "button"> <i class = "far fa-save"></i></button>
-        </div>
-      </div>
+    <!---11AM-->
+    <div id = "calendar-row3" class = "row justify-content-md-center border-top border-bottom calendar-row">
+      <div id = "time3" class = "col-md-1">11 AM</div>
+       <textarea rows = "3" id = "text-entry3" class = "col-md-10"></textarea>
+       <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+    </div>
 
-      <!---12PM-->
-      <div class = "input-group mb-3">
-        <div class = "input-group-prepend-row">
-          <span class = "input-group-text hour">12:00 PM</span>    
-        </div>
-        <textarea value = "" id="comment12pm" type = "text" cols = "100" rows = "2" class = "form-control description textarea"></textarea>
-        <div class = "input-group-append">
-          <button id = "button12pm" class = "btn btn-outline-secondary saveBtn" type = "button"> <i class = "far fa-save"></i></button>
-        </div>
-      </div>
+    <!---12PM-->
+    <div id = "calendar-row4" class = "row justify-content-md-center border-top border-bottom calendar-row">
+      <div id = "time4" class = "col-md-1">12 PM</div>
+       <textarea rows = "3" id = "text-entry4" class = "col-md-10"></textarea>
+       <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+    </div>
 
-      <!---1PM-->
-      <div class = "input-group mb-3">
-        <div class = "input-group-prepend-row">
-          <span class = "input-group-text hour">1:00 PM</span>    
-        </div>
-        <textarea value = "" id="comment1pm" type = "text" cols = "100" rows = "2" class = "form-control description textarea"></textarea>
-        <div class = "input-group-append">
-          <button id = "button1pm" class = "btn btn-outline-secondary saveBtn" type = "button"> <i class = "far fa-save"></i></button>
-        </div>
-      </div>
+    <!---1PM-->
+    <div id = "calendar-row5" class = "row justify-content-md-center border-top border-bottom calendar-row">
+      <div id = "time5" class = "col-md-1">1 PM</div>
+       <textarea rows = "3" id = "text-entry5" class = "col-md-10"></textarea>
+       <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+    </div>
 
-      <!---2PM-->
-      <div class = "input-group mb-3">
-        <div class = "input-group-prepend-row">
-          <span class = "input-group-text hour">2:00 PM</span>    
-        </div>
-        <textarea value = "" id="comment2pm" type = "text" cols = "100" rows = "2" class = "form-control description textarea"></textarea>
-        <div class = "input-group-append">
-          <button id = "button2pm" class = "btn btn-outline-secondary saveBtn" type = "button"> <i class = "far fa-save"></i></button>
-        </div>
-      </div>
+    <!---2PM-->
+    <div id = "calendar-row6" class = "row justify-content-md-center border-top border-bottom calendar-row">
+      <div id = "time6" class = "col-md-1">2 PM</div>
+       <textarea rows = "3" id = "text-entry6" class = "col-md-10"></textarea>
+       <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+    </div>
 
-      <!---3PM-->
-      <div class = "input-group mb-3">
-        <div class = "input-group-prepend-row">
-          <span class = "input-group-text hour">3:00 PM</span>    
-        </div>
-        <textarea value = "" id="comment3pm" type = "text" cols = "100" rows = "2" class = "form-control description textarea"></textarea>
-        <div class = "input-group-append">
-          <button id = "button3pm" class = "btn btn-outline-secondary saveBtn" type = "button"> <i class = "far fa-save"></i></button>
-        </div>
-      </div>
+    <!---3PM-->
+    <div id = "calendar-row7" class = "row justify-content-md-center border-top border-bottom calendar-row">
+      <div id = "time7" class = "col-md-1">3 PM</div>
+       <textarea rows = "3" id = "text-entry7" class = "col-md-10"></textarea>
+       <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+    </div>
 
-      <!---4PM-->
-      <div class = "input-group mb-3">
-        <div class = "input-group-prepend-row">
-          <span class = "input-group-text hour">4:00 PM</span>    
-        </div>
-        <textarea value = "" id="comment4pm" type = "text" cols = "100" rows = "2" class = "form-control description textarea"></textarea>
-        <div class = "input-group-append">
-          <button id = "button4pm" class = "btn btn-outline-secondary saveBtn" type = "button"> <i class = "far fa-save"></i></button>
-        </div>
-      </div>
+    <!---4PM-->
+    <div id = "calendar-row8" class = "row justify-content-md-center border-top border-bottom calendar-row">
+      <div id = "time8" class = "col-md-1">4 PM</div>
+       <textarea rows = "3" id = "text-entry8" class = "col-md-10"></textarea>
+       <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+    </div>
 
-      <!---5PM-->
-      <div class = "input-group mb-3">
-        <div class = "input-group-prepend-row">
-          <span class = "input-group-text hour">5:00 PM</span>    
-        </div>
-        <textarea value = "" id="comment5PM" type = "text" cols = "100" rows = "2" class = "form-control description textarea"></textarea>
-        <div class = "input-group-append">
-          <button id = "button5pm" class = "btn btn-outline-secondary saveBtn" type = "button"> <i class = "far fa-save"></i></button>
-        </div>
-      </div>
+    <!---5PM-->
+    <div id = "calendar-row9" class = "row justify-content-md-center border-top border-bottom calendar-row">
+      <div id = "time9" class = "col-md-1">5 PM</div>
+       <textarea rows = "3" id = "text-entry9" class = "col-md-10"></textarea>
+       <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+    </div>
 
     </div>
 
