--- a/index.html
+++ b/index.html
@@ -28,72 +28,120 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
       <p id = "currentTime" class = "lead"></p>
+      <span id = "timer"></span>
     </header>
+
+
     <div class="container">
       <!-- Timeblocks go here -->
 
-      <!---9AM-->
-     <div id = "calendar-row1" class = "row justify-content-md-center border-top border-bottom calendar-row">
-       <div id = "time1" class = "col-md-1">9 AM</div>
-        <textarea rows = "3" id = "text-entry1" class = "col-md-10"></textarea>
-        <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
-     </div>
+      <!--9AM-->
+      <div class="input-group mb-3">
+        <div class="input-group-prepend row">
+          <span class="input-group-text hour">09:00 AM</span>
+        </div>
+        <textarea value="" id="comment9am" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
+        <div class="input-group-append">
+          <button id="button9am" class="btn btn-outline-secondary saveBtn" type="button"><i
+              class="far fa-save"></i></button>
+        </div>
+      </div>
 
-     <!---10AM-->
-     <div id = "calendar-row2" class = "row justify-content-md-center border-top border-bottom calendar-row">
-      <div id = "time2" class = "col-md-1">10 AM</div>
-       <textarea rows = "3" id = "text-entry2" class = "col-md-10"></textarea>
-       <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
+     <!-- 10 am-->
+    <div class="input-group mb-3">
+      <div class="input-group-prepend row">
+        <span class="input-group-text hour">10:00 AM</span>
+      </div>
+      <textarea id="comment10am" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
+      <div class="input-group-append">
+        <button id="button10am" class="btn btn-outline-secondary saveBtn" type="button"><i
+            class="far fa-save"></i></button>
+      </div>
     </div>
 
-    <!---11AM-->
-    <div id = "calendar-row3" class = "row justify-content-md-center border-top border-bottom calendar-row">
-      <div id = "time3" class = "col-md-1">11 AM</div>
-       <textarea rows = "3" id = "text-entry3" class = "col-md-10"></textarea>
-       <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
-    </div>
+    <!--11 am-->
+    <div class="input-group mb-3">
+      <div class="input-group-prepend row">
+        <span class="input-group-text hour">11:00 AM</span>
+        </div>
+        <textarea id="comment11am" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
+        <div class="input-group-append">
+          <button id="button11am" class="btn btn-outline-secondary saveBtn" type="button"><i
+              class="far fa-save"></i></button>
+        </div>
+      </div>
 
-    <!---12PM-->
-    <div id = "calendar-row4" class = "row justify-content-md-center border-top border-bottom calendar-row">
-      <div id = "time4" class = "col-md-1">12 PM</div>
-       <textarea rows = "3" id = "text-entry4" class = "col-md-10"></textarea>
-       <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
-    </div>
+      <!--12 pm-->
+      <div class="input-group mb-3">
+        <div class="input-group-prepend row">
+          <span class="input-group-text hour">12:00 PM</span>
+        </div>
+        <textarea id="comment12pm" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
+        <div class="input-group-append">
+          <button id="button12pm" class="btn btn-outline-secondary saveBtn" type="button"><i
+              class="far fa-save"></i></button>
+        </div>
+      </div>
 
-    <!---1PM-->
-    <div id = "calendar-row5" class = "row justify-content-md-center border-top border-bottom calendar-row">
-      <div id = "time5" class = "col-md-1">1 PM</div>
-       <textarea rows = "3" id = "text-entry5" class = "col-md-10"></textarea>
-       <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
-    </div>
+      <!--1 pm-->
+      <div class="input-group mb-3">
+        <div class="input-group-prepend row">
+          <span class="input-group-text hour">01:00 PM</span>
+        </div>
+        <textarea id="comment1pm" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
+        <div class="input-group-append">
+          <button id="button1pm" class="btn btn-outline-secondary saveBtn" type="button"><i
+              class="far fa-save"></i></button>
+        </div>
+      </div>
 
-    <!---2PM-->
-    <div id = "calendar-row6" class = "row justify-content-md-center border-top border-bottom calendar-row">
-      <div id = "time6" class = "col-md-1">2 PM</div>
-       <textarea rows = "3" id = "text-entry6" class = "col-md-10"></textarea>
-       <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
-    </div>
+      <!--2 pm-->
+      <div class="input-group mb-3">
+        <div class="input-group-prepend row">
+          <span class="input-group-text hour">02:00 PM</span>
+        </div>
+        <textarea id="comment2pm" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
+        <div class="input-group-append">
+          <button id="button2pm" class="btn btn-outline-secondary saveBtn" type="button"><i
+              class="far fa-save"></i></button>
+        </div>
+      </div>
 
-    <!---3PM-->
-    <div id = "calendar-row7" class = "row justify-content-md-center border-top border-bottom calendar-row">
-      <div id = "time7" class = "col-md-1">3 PM</div>
-       <textarea rows = "3" id = "text-entry7" class = "col-md-10"></textarea>
-       <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
-    </div>
+      <!--3 pm-->
+      <div class="input-group mb-3">
+        <div class="input-group-prepend row">
+          <span class="input-group-text hour">03:00 PM</span>
+        </div>
+        <textarea id="comment3pm" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
+        <div class="input-group-append">
+          <button id="button3pm" class="btn btn-outline-secondary saveBtn" type="button"><i
+              class="far fa-save"></i></button>
+        </div>
+      </div>
 
-    <!---4PM-->
-    <div id = "calendar-row8" class = "row justify-content-md-center border-top border-bottom calendar-row">
-      <div id = "time8" class = "col-md-1">4 PM</div>
-       <textarea rows = "3" id = "text-entry8" class = "col-md-10"></textarea>
-       <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
-    </div>
+      <!--4 pm-->
+      <div class="input-group mb-3">
+        <div class="input-group-prepend row">
+          <span class="input-group-text hour">04:00 PM</span>
+        </div>
+        <textarea id="comment4pm" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
+        <div class="input-group-append">
+          <button id="button4pm" class="btn btn-outline-secondary saveBtn" type="button"><i
+              class="far fa-save"></i></button>
+        </div>
+      </div>
 
-    <!---5PM-->
-    <div id = "calendar-row9" class = "row justify-content-md-center border-top border-bottom calendar-row">
-      <div id = "time9" class = "col-md-1">5 PM</div>
-       <textarea rows = "3" id = "text-entry9" class = "col-md-10"></textarea>
-       <button id="save" class="col-md-1"><i class="far fa-save"></i></button>
-    </div>
+      <!-- 5pm-->
+      <div class="input-group mb-3">
+        <div class="input-group-prepend row">
+          <span class="input-group-text hour">05:00 PM</span>
+        </div>
+        <textarea id="comment5pm" value="" type="text" cols="100" rows="2" class="form-control description textarea"></textarea>
+        <div class="input-group-append">
+          <button id="button5pm" class="btn btn-outline-secondary saveBtn" type="button"><i
+              class="far fa-save"></i></button>
+        </div>
+      </div>
 
     </div>
 
